--- a/style.css
+++ b/style.css
@@ -115,6 +115,37 @@ span{
     color: black;
     border: 2px solid black;
 }
+/* Style cho nền mờ */
+.blur-bg {
+    display: none; /* Ẩn nền mờ khi chưa kích hoạt popup */
+    position: fixed; /* Nền mờ cố định, phủ kín màn hình */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Màu nền mờ */
+    z-index: 1; /* Đảm bảo nền mờ nằm dưới popup */
+}
+  /* Style cho cửa sổ popup */
+.modal-content {
+    display: none; /* Ẩn popup khi chưa kích hoạt */
+    position: fixed; /* Popup cố định, hiển thị ở giữa màn hình */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Căn giữa popup */
+    width: 50%; /* Chiều rộng của popup */
+    padding: 20px; /* Đệm bên trong popup */
+    background: #fff; /* Màu nền của popup */
+    border-radius: 5px; /* Bo góc của popup */
+    z-index: 2; /* Đảm bảo popup nằm trên nền mờ */
+}
+  /* Style cho nút đóng popup */
+.close-modal {
+    float: right; /* Nút đóng nằm bên phải của tiêu đề */
+    font-size: 30px; /* Kích thước của nút đóng */
+    cursor: pointer; /* Con trỏ chuột khi di chuyển vào nút đóng */
+}
+
 .img-box img{
     border-radius: 50%;
     width: 450px;
