--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
     font-family: 'Century Gothic';
     text-decoration: none;
     list-style: none;
+
+}
+
+.container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 10px;
 }
 
 .header{
